--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-react-app",
   "version": "0.1.0",
+  "homepage": "https://vidhyadarshini.github.io/profile-vidhya",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
